--- a/OficinaMecanica/appsettings.json
+++ b/OficinaMecanica/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OficinaMecanicaContext": "server=den1.mysql2.gear.host;userid=oficinadbcs;password=12345678#;Database=oficinadbcs"
+    "OficinaMecanicaContext": "server=den1.mysql2.gear.host;userid=oficinacsdb;password=12345678#;database=oficinacsdb"
   }
 }
